apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = 1.8
version = '1.0'

// Declares binary plugin and its required JavaFX classpath
apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/javafx.plugin"

// Configures plugin
javafx {
    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
    //javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.8.0_72.jdk'
    //javaRuntime = '/usr/lib/jvm/default-java'
    //javaRuntime = /usr/lib/jvm/java-8-oracle/jre/bin/java
    
    
    // JVM arguments, system properties, application command line arguments
    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = ['prism.disableRegionCaching':'true']
    arguments = ['-l', '--fast']

    
}

uploadArchives {
	       repositories {
	       		    flatDir {
			    	       dirs 'repos'
				}
		    }
}